# guild

./: .gitignore  README.md  guild.toml  marketplace.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
plugins/guild-skills/: CLAUDE.md
plugins/guild-skills/skills/: review-marketplace.md  update-plugin.md
src/guild/: __init__.py  __main__.py  _build.py  _cli.py  _config.py  _install.py  _models.py  _scaffold.py  _validate.py
src/guild/_plugin/guild-skills/: plugin.toml
src/guild/_plugin/guild-skills/skills/: create-plugin.md  guild-oracle.md  write-skill.md
tests/: test_build.py  test_cli.py  test_config.py  test_install.py  test_models.py  test_scaffold.py  test_validate.py
