[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaymd96-guild"
dynamic = ["version"]
description = "Scaffold and manage Claude Code plugin marketplaces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "James", email = "jaymd96@users.noreply.github.com" }]
keywords = ["claude", "plugins", "marketplace", "scaffold", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.scripts]
guild = "guild._cli:main"

[project.urls]
Source = "https://github.com/jaymd96/guild"
Issues = "https://github.com/jaymd96/guild/issues"

[tool.hatch.version]
path = "src/guild/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/guild"]

[tool.hatch.build.targets.wheel.force-include]
"src/guild/_plugin" = "guild/_plugin"

# -- Environments ----------------------------------------------------------

[tool.hatch.envs.default]
dependencies = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov=guild --cov-report=term-missing {args:tests}"

[tool.hatch.envs.lint]
dependencies = ["ruff>=0.8"]

[tool.hatch.envs.lint.scripts]
check = "ruff check src tests && ruff format --check src tests"
fix = "ruff check --fix src tests && ruff format src tests"

# -- Tool config ------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["guild"]
